Suite mentorat, correction scss position relative et height des collapse et  uncollapse et correction lettre manquante dans fichier logements.json "canal"

--- a/Kasa/src/styles/ApartmentPage.scss
+++ b/Kasa/src/styles/ApartmentPage.scss
@@ -32,7 +32,7 @@
     position: absolute;
     z-index: 1;
     right: 50%;
-    top: 89%;
+    top: 80%;
     color: #FFF;
     font-weight: 500;
 }
@@ -151,3 +151,40 @@ main {
     // align-items: center;
     gap: 5rem;
 }
+
+@media screen and (width <=768px)  {
+    .counter {
+        display: none; // DISPARITION DU COMPTEUR DE PIED DE PAGE
+    }
+
+    main {
+        display: block;
+    }
+
+    .location {
+        margin-top: 3%;
+    }
+
+    .tags {
+        margin-top: 4%;
+    }
+
+    .host-rating {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row-reverse;
+    }
+
+    .rating {
+        margin-top: 0;
+        align-items: center;
+        img {
+            margin-left: 10px;
+        }
+    }
+
+    .description-equipements {
+        display: block;
+    }
+}
+
