--- a/Kasa/src/styles/CardApartments.scss
+++ b/Kasa/src/styles/CardApartments.scss
@@ -25,3 +25,9 @@
     text-decoration: none;
 }
 
+@media screen and (max-width: 768px) {
+    
+    .card-img {
+        flex-basis: 100%;
+    }
+}
