--- a/Kasa/src/styles/Collapse.scss
+++ b/Kasa/src/styles/Collapse.scss
@@ -2,6 +2,7 @@
     // margin-left: 5%;
     // margin-right: 1%;
     width: 80%;
+    position: relative;
 }
 
 .collapse{
@@ -9,7 +10,7 @@
     transform: rotate(180deg);
     background-color: #ff6060;
     cursor: pointer;
-    height: 34px;
+    height: 40px;
 
 }
 
@@ -18,7 +19,7 @@
     transition-duration: 0.5s;
     transform: rotate(360deg);
     cursor: pointer;
-    height: 34px;
+    height: 40px;
 
 }
 
@@ -42,7 +43,7 @@
 
 .collapse-banner{
     background-color: #FF6060;
-    height: 34px;
+    height: 48px;
     border-radius: 5px;
     margin-bottom: -12px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -83,3 +84,9 @@
     opacity: 1; /* Changement d'opacité pour rendre visible le contenu */
     max-height: 200px; /* Valeur maximale de la hauteur*/
   }
+
+  @media (max-width: 992px) {
+    .all-collapse{
+        width: 92%;
+    }
+}
