--- a/Kasa/src/styles/main.scss
+++ b/Kasa/src/styles/main.scss
@@ -9,4 +9,9 @@ body {
   // margin: 0 15%;
   padding: 2rem 3rem;
   min-height: 70vh;
+
+  @media screen and (width <=768px)  {
+
+  }
 }
+
